Bug 512650 - Error message when executing `xdg-open`
Summary: Error message when executing `xdg-open`
Status: RESOLVED FIXED
Alias: None
Product: kde-cli-tools
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.5.3
Platform: KDE Linux Linux
: VLO minor
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-26 17:48 UTC by jeckyhl
Modified: 2025-12-23 15:02 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jeckyhl 2025-11-26 17:48:15 UTC
SUMMARY
An error message is displayed on the console when using `xdg-open`, indicating a QDBusError related to the XDG Portal

The message indicates a QDBusError

STEPS TO REPRODUCE
1. Open a bash terminal on the KDE Plasma Desktop
2. Execute the command `xdg-open ~` 

OBSERVED RESULT
an error message is displayed. The content of the message is:

qt.qpa.services: Failed to register with host portal QDBusError("org.freedesktop.portal.Error.Failed", "Could not register app ID: App info not found for 'org.kde.kioclient'")

Note: The `xdg-open` command still functions correctly and opens the target directory as expected. The output is a non-blocking error message.

EXPECTED RESULT
The console output should be silent (no warning message should appear), as the operation is successful.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora Linux 43 Kde Plasma Desktop Edition
KDE Plasma Version:  6.5.3
KDE Frameworks Version:  6.20.0
Qt Version: 6.10.1

ADDITIONAL INFORMATION
This issue started occurring after upgrading from Fedora 42 to Fedora 43, suggesting a regression in one of the core Plasma or Qt components

My version of xdg-desktop-portal-kde is 6.5.3-1 (Fedora package)

Also, altough `xdg-open` is the most straightforward way to reproduce the problem, there's other ways like
  python -m webbrowser "https://www.python.org"
  (will display error message « Failed to register with host portal ... »)
Comment 1 goekhan.kocak 2025-12-03 09:02:26 UTC
same for me

xdg-open works but when using k9s with kubelogin, some remnants of the error message are still rendered in k9s which is annoying.
Comment 2 J. Gerhards 2025-12-11 07:24:17 UTC
Same result for me on Arch.

Operating System: Arch Linux 
KDE Plasma Version: 6.5.4
KDE Frameworks Version: 6.20.0
Qt Version: 6.10.1
Kernel Version: 6.17.9-arch1-1 (64-bit)
Graphics Platform: Wayland
xdg-desktop-portal: 6.5.4-1 (package version)
kde-cli-tools: 6.5.3-1 (package that contains kioclient)
kioclient: 6.5.4
Comment 3 jeckyhl 2025-12-11 19:21:20 UTC
A possible workaround is indicated on this page :

https://forum.endeavouros.com/t/xdg-open-works-but-shows-an-error-message/76803/2

The idea is to create a .desktop file
Comment 4 Roke Julian Lockhart Beedell 2025-12-14 01:56:47 UTC
Although this most prominently affects `xdg-open` (alongside `xdg-run`):

1.	https://forum.endeavouros.com/t/xdg-open-works-but-shows-an-error-message/76803?u=rokejulianlockhart#post_1:~:text=qt.qpa.services:%20Failed%20to%20register%20with,.kioclient%E2%80%99%E2%80%9D

2.	https://forum.manjaro.org/t/xdg-open-throws-filed-to-register-with-host-portal-error/183762/1?u=beedellrokejulianloc#post_1:~:text=mp3%20file%20with-,xdg%2Drun

…it also affects others:

1.	~~~
	qt.qpa.services: Failed to register with host portal QDBusError("org.freedesktop.portal.Error.Failed", "Could not register app ID: App info not found for 'org.kde.kioclient'")
	reaping pid: 120839 -- steam
	qt.qpa.services: Failed to register with host portal QDBusError("org.freedesktop.portal.Error.Failed", "Could not register app ID: App info not found for 'org.kde.kioclient'")
	reaping pid: 121122 -- steam
	qt.qpa.services: Failed to register with host portal QDBusError("org.freedesktop.portal.Error.Failed", "Could not register app ID: App info not found for 'org.kde.kioclient'")
	reaping pid: 121414 -- steam
	qt.qpa.services: Failed to register with host portal QDBusError("org.freedesktop.portal.Error.Failed", "Could not register app ID: App info not found for 'org.kde.kioclient'")
	reaping pid: 121720 -- steam
	~~~

2.	https://universal-blue.discourse.group/t/okular-flatpak-error/11229?u=rokejulianlockhart#post_1:~:text=qt.qpa.services:%20Failed%20to%20register%20with%20host%20portal%20QDBusError(%E2%80%9Corg.freedesktop.portal.Error.Failed%E2%80%9D%2C%20%E2%80%9CCould%20not%20register%20app%20ID:%20App%20info%20not%20found%20for%20%E2%80%98org.kde.kioclient%E2%80%99%E2%80%9D

3.	https://asknsopjax.blogspot.com/?page=en-git-ddev-ddev-1765437908662#:~:text=qpa.services:%20Failed%20to%20register%20with%20host%20portal%20QDBusError(%22org.freedesktop.portal.Error.Failed%22%2C%20%22Could%20not%20register%20app%20ID:%20App%20info%20not%20found%20for%20'org.kde.kioclient'%22
Comment 5 David Redondo 2025-12-15 14:06:04 UTC
this is not a fatal warning. If it annoys you can disable the relevant logging category. 

To get rid of it kioclient either installs a valid desktop file or does not set appId.
Comment 6 Bug Janitor Service 2025-12-15 14:21:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kde-cli-tools/-/merge_requests/121
Comment 7 David Redondo 2025-12-19 10:18:05 UTC
Git commit b8a7dffedd3e9c8e67e73875435f62e19cb655af by David Redondo.
Committed on 19/12/2025 at 09:37.
Pushed by davidre into branch 'master'.

kioclient: Don't set appname

kioclient does not have a desktop file it doesnt make sense
to set an app id.
FIXED-IN:6.5.5

M  +1    -2    kioclient/kioclient.cpp

https://invent.kde.org/plasma/kde-cli-tools/-/commit/b8a7dffedd3e9c8e67e73875435f62e19cb655af
Comment 8 David Redondo 2025-12-19 10:22:57 UTC
Git commit 2234f7e745ab41ca51c4200b8be44173d7a0badf by David Redondo.
Committed on 19/12/2025 at 10:18.
Pushed by davidre into branch 'Plasma/6.5'.

kioclient: Don't set appname

kioclient does not have a desktop file it doesnt make sense
to set an app id.
FIXED-IN:6.5.5


(cherry picked from commit b8a7dffedd3e9c8e67e73875435f62e19cb655af)

b8a7dffe kioclient: Don't set appname

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +1    -2    kioclient/kioclient.cpp

https://invent.kde.org/plasma/kde-cli-tools/-/commit/2234f7e745ab41ca51c4200b8be44173d7a0badf