kioclient: Don't set appname

kioclient does not have a desktop file it doesnt make sense
to set an app id.
BUG:512650
FIXED-IN:6.5.5